# wf-passive-shower

./: .gitignore  README.md
back-end/: .gitignore  Cargo.toml  go.mod  go.sum  main.go  router_test.go
back-end/src/: image_detection.rs  main.rs
front-end/: package-lock.json  package.json  tsconfig.json
front-end/src/app/: layout.tsx  page.tsx
